fixed a bug where nochoke total pp difference was added by bonus pp twice